Move patterns into EventExtractor

--- a/events.cabal
+++ b/events.cabal
@@ -19,6 +19,7 @@ library
                        Mean
                        Bin
                        Time
+                       EventExtractor
   build-depends:       base >=4.12 && <4.13,
                        containers,
                        linear,
